#Changes in Frinex 1.4

Added logging of the webbrowser's userAgentData.

Added usage documentation for the group robot settings and the standard robot settings.

Added default content to <progress/> elements after observing chrome treating them as a starting progress and putting subsequent elements into the already closed progress.

Added default content to <div/> elements after observing chrome treating them as a starting div and putting subsequent elements into the already closed div.

Added informational text to the header of the administration pages "Please be aware that that while the data is displayed in milliseconds, that does not mean millisecond accuracy. There are many factors that affect accuracy, so to determine the accuracy each experiment would need to be physically measured in a browser on some typical hardware used by the participants".

Modified the mediaId produced when using stimulusPresent from "autoStimulus" and "stimulusPresent" to use "audio-" + stimulusId and "video-" + stimulusId.

Added a score group to the clearCurrentScore action to provide a way to keep track of BQ4 sessions. The clearCurrentScore clears the current score and sets the current score group string based on the evaluateTokens. The score group is a marker shown in the admin system to keep track of the records and does not affect the score collection process.

Added REST interface methods that allow seaching for values in each custom field of the participant table (seach custom metadata fields).

Added extra search methods for tag pair data based on eventTag or tagValue1, which will for example make it possible to list all completion codes.

Added add an evaluate method addTime() for adding together two times, for example adding 30 minutes to 15:00.

Reenabled the use of pause and resume on the web audio recorder due to popular request although it can cause timing issues when used.
