@@ -1,5 +1,7 @@
 #Changes in Frinex 1.4
 
+Changed the method of collecting sequential recordings because closing the recorder leaves the encoder worker running and the documented methods to terminate the worker have not helped, so we keep the recorder open for new recordings. This will have implications for timing and recording alignment to events. This change should make it possible to collect more than 100 recordings sequentially.
+
 Added logging of the webbrowser's userAgentData.
 
 Added usage documentation for the group robot settings and the standard robot settings.
